tests/should-fail/crashes/shouldnt-crash-5.j
function a takes nothing returns integer
	if true then
		return 0
	elseif false then
	elselocal a a = a	endif
endfunction
